# modbus-studio

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  analysis_options.yaml  pubspec.yaml
.github/workflows/: ci.yml  release.yml
android/app/: build.gradle.kts
archive_old_code/: Makefile
archive_old_code/core_go/: go.mod  go.sum
archive_old_code/core_rust/: Cargo.toml
archive_old_code/core_rust/src/: cli.rs  main.rs
archive_old_code/core_rust/src/core/: master.rs
archive_old_code/gui_flutter/: README.md  pubspec.yaml
archive_old_code/old_python_scripts/: LOG.TXT  auto_scan_ip.py  modbus_scanner.py  scan_registers.py
docs/decisions/: ADR-001-javascript-scripting-engine.md  ADR-002-multiplatform-automated-releases.md  DEPRECATION_LOG.md
docs/releases/: release_v1_1_0.md  release_v1_1_1.md
docs/specs/: ffi_api_contract_design.md  phase_2_modbus_protocol_expansion.md  register_explorer.md  reports_export_plan.md  reports_export_spec.md  ui_design_adherence_spec.md  user_manual_education.md  user_manual_screen.md
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart  theme.dart
lib/providers/: connection_provider.dart  radar_provider.dart  settings_provider.dart  (+1 more)
linux/: CMakeLists.txt
rust/: Cargo.toml  test_modbus.db-shm  test_modbus.db-wal
rust/src/: frb_generated.rs
rust/src/api/: client.rs  db.rs  historian.rs  mod.rs  scanner.rs  server.rs
rust_builder/: pubspec.yaml
simulator/: modbus_sim.py
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+122 files in other folders)
