[package]
name = "core_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
crossterm = "0.29.0"
ratatui = "0.30.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
tokio-modbus = { version = "0.17.0", features = ["rtu", "tcp", "server", "rtu-server", "tcp-server"] }
tokio-serial = "5.4.5"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
